--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>798</width>
-    <height>879</height>
+    <width>796</width>
+    <height>1134</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,8 +17,8 @@
    <widget class="QLineEdit" name="oldLibraryTextBox">
     <property name="geometry">
      <rect>
-      <x>148</x>
-      <y>10</y>
+      <x>158</x>
+      <y>240</y>
       <width>331</width>
       <height>22</height>
      </rect>
@@ -27,8 +27,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>8</x>
-      <y>10</y>
+      <x>18</x>
+      <y>240</y>
       <width>131</width>
       <height>20</height>
      </rect>
@@ -40,8 +40,8 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>12</x>
-      <y>50</y>
+      <x>22</x>
+      <y>280</y>
       <width>131</width>
       <height>20</height>
      </rect>
@@ -53,8 +53,8 @@
    <widget class="QLineEdit" name="newLibraryTextBox">
     <property name="geometry">
      <rect>
-      <x>148</x>
-      <y>50</y>
+      <x>158</x>
+      <y>280</y>
       <width>331</width>
       <height>22</height>
      </rect>
@@ -63,21 +63,21 @@
    <widget class="QPushButton" name="searchOldLibraryButton">
     <property name="geometry">
      <rect>
-      <x>640</x>
-      <y>20</y>
-      <width>141</width>
+      <x>570</x>
+      <y>240</y>
+      <width>191</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>Search old library</string>
+     <string>Search old library for games</string>
     </property>
    </widget>
    <widget class="QListWidget" name="gameResultsListBox">
     <property name="geometry">
      <rect>
-      <x>8</x>
-      <y>130</y>
+      <x>18</x>
+      <y>360</y>
       <width>761</width>
       <height>301</height>
      </rect>
@@ -86,8 +86,8 @@
    <widget class="QLabel" name="numberOfGamesInLibraryLabel">
     <property name="geometry">
      <rect>
-      <x>8</x>
-      <y>100</y>
+      <x>18</x>
+      <y>330</y>
       <width>251</width>
       <height>16</height>
      </rect>
@@ -99,8 +99,8 @@
    <widget class="QLineEdit" name="gameDirectoryTextBox">
     <property name="geometry">
      <rect>
-      <x>128</x>
-      <y>440</y>
+      <x>138</x>
+      <y>670</y>
       <width>601</width>
       <height>22</height>
      </rect>
@@ -109,8 +109,8 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>8</x>
-      <y>440</y>
+      <x>18</x>
+      <y>670</y>
       <width>101</width>
       <height>16</height>
      </rect>
@@ -122,8 +122,8 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>8</x>
-      <y>480</y>
+      <x>18</x>
+      <y>710</y>
       <width>91</width>
       <height>16</height>
      </rect>
@@ -135,8 +135,8 @@
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>8</x>
-      <y>520</y>
+      <x>18</x>
+      <y>750</y>
       <width>101</width>
       <height>16</height>
      </rect>
@@ -148,8 +148,8 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>8</x>
-      <y>560</y>
+      <x>18</x>
+      <y>790</y>
       <width>121</width>
       <height>16</height>
      </rect>
@@ -161,8 +161,8 @@
    <widget class="QLineEdit" name="manifestPathTextBox">
     <property name="geometry">
      <rect>
-      <x>128</x>
-      <y>480</y>
+      <x>138</x>
+      <y>710</y>
       <width>601</width>
       <height>22</height>
      </rect>
@@ -171,8 +171,8 @@
    <widget class="QLineEdit" name="workshopPathTextBox">
     <property name="geometry">
      <rect>
-      <x>128</x>
-      <y>520</y>
+      <x>138</x>
+      <y>750</y>
       <width>601</width>
       <height>22</height>
      </rect>
@@ -181,8 +181,8 @@
    <widget class="QLineEdit" name="workshopManifestTextBox">
     <property name="geometry">
      <rect>
-      <x>128</x>
-      <y>560</y>
+      <x>138</x>
+      <y>790</y>
       <width>601</width>
       <height>22</height>
      </rect>
@@ -191,8 +191,8 @@
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>8</x>
-      <y>600</y>
+      <x>18</x>
+      <y>830</y>
       <width>61</width>
       <height>16</height>
      </rect>
@@ -204,8 +204,8 @@
    <widget class="QLineEdit" name="steamIdTextBox">
     <property name="geometry">
      <rect>
-      <x>128</x>
-      <y>600</y>
+      <x>138</x>
+      <y>830</y>
       <width>113</width>
       <height>22</height>
      </rect>
@@ -214,47 +214,47 @@
    <widget class="QPushButton" name="moveGameButton">
     <property name="geometry">
      <rect>
-      <x>590</x>
-      <y>600</y>
-      <width>131</width>
+      <x>570</x>
+      <y>830</y>
+      <width>161</width>
       <height>28</height>
      </rect>
     </property>
     <property name="text">
-     <string>Move to new library</string>
+     <string>Move game to new library</string>
     </property>
    </widget>
    <widget class="QPushButton" name="oldLibraryPathSelectButton">
     <property name="geometry">
      <rect>
-      <x>480</x>
-      <y>10</y>
+      <x>490</x>
+      <y>240</y>
       <width>51</width>
       <height>28</height>
      </rect>
     </property>
     <property name="text">
-     <string>Select</string>
+     <string>browse</string>
     </property>
    </widget>
    <widget class="QPushButton" name="newLibraryPathSelectButton">
     <property name="geometry">
      <rect>
-      <x>480</x>
-      <y>50</y>
+      <x>490</x>
+      <y>280</y>
       <width>51</width>
       <height>28</height>
      </rect>
     </property>
     <property name="text">
-     <string>Select</string>
+     <string>browse</string>
     </property>
    </widget>
    <widget class="QListWidget" name="statusListBox">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>670</y>
+      <x>20</x>
+      <y>900</y>
       <width>771</width>
       <height>151</height>
      </rect>
@@ -263,8 +263,8 @@
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>640</y>
+      <x>20</x>
+      <y>870</y>
       <width>55</width>
       <height>16</height>
      </rect>
@@ -273,13 +273,72 @@
      <string>Status:</string>
     </property>
    </widget>
+   <widget class="QListWidget" name="oldLibrarySelectionListBox">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>30</y>
+      <width>256</width>
+      <height>192</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QListWidget" name="newLibrarySelectionListBox">
+    <property name="geometry">
+     <rect>
+      <x>290</x>
+      <y>30</y>
+      <width>256</width>
+      <height>192</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_9">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>10</y>
+      <width>191</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Select old library to copy from:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_10">
+    <property name="geometry">
+     <rect>
+      <x>290</x>
+      <y>10</y>
+      <width>181</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Select new library to copy to:</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="searchForLibrariesPushButton">
+    <property name="geometry">
+     <rect>
+      <x>570</x>
+      <y>110</y>
+      <width>191</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Search computer for libraries</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>798</width>
+     <width>796</width>
      <height>26</height>
     </rect>
    </property>
