--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>796</width>
+    <width>798</width>
     <height>1134</height>
    </rect>
   </property>
@@ -76,9 +76,9 @@
    <widget class="QListWidget" name="gameResultsListBox">
     <property name="geometry">
      <rect>
-      <x>18</x>
+      <x>8</x>
       <y>360</y>
-      <width>761</width>
+      <width>781</width>
       <height>301</height>
      </rect>
     </property>
@@ -191,7 +191,7 @@
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>18</x>
+      <x>20</x>
       <y>830</y>
       <width>61</width>
       <height>16</height>
@@ -253,10 +253,10 @@
    <widget class="QListWidget" name="statusListBox">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>900</y>
-      <width>771</width>
-      <height>151</height>
+      <x>10</x>
+      <y>910</y>
+      <width>781</width>
+      <height>171</height>
      </rect>
     </property>
    </widget>
@@ -332,13 +332,26 @@
      <string>Search computer for libraries</string>
     </property>
    </widget>
+   <widget class="QCheckBox" name="deleteOriginalcheckBox">
+    <property name="geometry">
+     <rect>
+      <x>580</x>
+      <y>870</y>
+      <width>121</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Delete original?</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>796</width>
+     <width>798</width>
      <height>26</height>
     </rect>
    </property>
