--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>798</width>
-    <height>1134</height>
+    <width>1425</width>
+    <height>929</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -29,7 +29,7 @@
      <rect>
       <x>18</x>
       <y>240</y>
-      <width>131</width>
+      <width>121</width>
       <height>20</height>
      </rect>
     </property>
@@ -40,7 +40,7 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>22</x>
+      <x>20</x>
       <y>280</y>
       <width>131</width>
       <height>20</height>
@@ -63,14 +63,14 @@
    <widget class="QPushButton" name="searchOldLibraryButton">
     <property name="geometry">
      <rect>
-      <x>570</x>
+      <x>600</x>
       <y>240</y>
       <width>191</width>
-      <height>31</height>
+      <height>71</height>
      </rect>
     </property>
     <property name="text">
-     <string>Search old library for games</string>
+     <string>Search old library for games </string>
     </property>
    </widget>
    <widget class="QListWidget" name="gameResultsListBox">
@@ -79,7 +79,7 @@
       <x>8</x>
       <y>360</y>
       <width>781</width>
-      <height>301</height>
+      <height>261</height>
      </rect>
     </property>
    </widget>
@@ -100,8 +100,8 @@
     <property name="geometry">
      <rect>
       <x>138</x>
-      <y>670</y>
-      <width>601</width>
+      <y>640</y>
+      <width>651</width>
       <height>22</height>
      </rect>
     </property>
@@ -110,7 +110,7 @@
     <property name="geometry">
      <rect>
       <x>18</x>
-      <y>670</y>
+      <y>640</y>
       <width>101</width>
       <height>16</height>
      </rect>
@@ -123,7 +123,7 @@
     <property name="geometry">
      <rect>
       <x>18</x>
-      <y>710</y>
+      <y>680</y>
       <width>91</width>
       <height>16</height>
      </rect>
@@ -136,7 +136,7 @@
     <property name="geometry">
      <rect>
       <x>18</x>
-      <y>750</y>
+      <y>720</y>
       <width>101</width>
       <height>16</height>
      </rect>
@@ -149,7 +149,7 @@
     <property name="geometry">
      <rect>
       <x>18</x>
-      <y>790</y>
+      <y>760</y>
       <width>121</width>
       <height>16</height>
      </rect>
@@ -162,8 +162,8 @@
     <property name="geometry">
      <rect>
       <x>138</x>
-      <y>710</y>
-      <width>601</width>
+      <y>680</y>
+      <width>651</width>
       <height>22</height>
      </rect>
     </property>
@@ -172,8 +172,8 @@
     <property name="geometry">
      <rect>
       <x>138</x>
-      <y>750</y>
-      <width>601</width>
+      <y>720</y>
+      <width>651</width>
       <height>22</height>
      </rect>
     </property>
@@ -182,8 +182,8 @@
     <property name="geometry">
      <rect>
       <x>138</x>
-      <y>790</y>
-      <width>601</width>
+      <y>760</y>
+      <width>651</width>
       <height>22</height>
      </rect>
     </property>
@@ -192,7 +192,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>830</y>
+      <y>800</y>
       <width>61</width>
       <height>16</height>
      </rect>
@@ -205,7 +205,7 @@
     <property name="geometry">
      <rect>
       <x>138</x>
-      <y>830</y>
+      <y>800</y>
       <width>113</width>
       <height>22</height>
      </rect>
@@ -214,10 +214,10 @@
    <widget class="QPushButton" name="moveGameButton">
     <property name="geometry">
      <rect>
-      <x>570</x>
-      <y>830</y>
+      <x>300</x>
+      <y>790</y>
       <width>161</width>
-      <height>28</height>
+      <height>61</height>
      </rect>
     </property>
     <property name="text">
@@ -253,18 +253,18 @@
    <widget class="QListWidget" name="statusListBox">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>910</y>
-      <width>781</width>
-      <height>171</height>
+      <x>830</x>
+      <y>30</y>
+      <width>551</width>
+      <height>801</height>
      </rect>
     </property>
    </widget>
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>870</y>
+      <x>820</x>
+      <y>10</y>
       <width>55</width>
       <height>16</height>
      </rect>
@@ -278,7 +278,7 @@
      <rect>
       <x>20</x>
       <y>30</y>
-      <width>256</width>
+      <width>271</width>
       <height>192</height>
      </rect>
     </property>
@@ -286,9 +286,9 @@
    <widget class="QListWidget" name="newLibrarySelectionListBox">
     <property name="geometry">
      <rect>
-      <x>290</x>
+      <x>310</x>
       <y>30</y>
-      <width>256</width>
+      <width>281</width>
       <height>192</height>
      </rect>
     </property>
@@ -309,7 +309,7 @@
    <widget class="QLabel" name="label_10">
     <property name="geometry">
      <rect>
-      <x>290</x>
+      <x>310</x>
       <y>10</y>
       <width>181</width>
       <height>16</height>
@@ -322,10 +322,10 @@
    <widget class="QPushButton" name="searchForLibrariesPushButton">
     <property name="geometry">
      <rect>
-      <x>570</x>
-      <y>110</y>
+      <x>600</x>
+      <y>90</y>
       <width>191</width>
-      <height>28</height>
+      <height>71</height>
      </rect>
     </property>
     <property name="text">
@@ -335,8 +335,8 @@
    <widget class="QCheckBox" name="deleteOriginalcheckBox">
     <property name="geometry">
      <rect>
-      <x>580</x>
-      <y>870</y>
+      <x>480</x>
+      <y>810</y>
       <width>121</width>
       <height>20</height>
      </rect>
@@ -345,13 +345,62 @@
      <string>Delete original?</string>
     </property>
    </widget>
+   <widget class="QProgressBar" name="copyGameProgressBar">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>850</y>
+      <width>201</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="value">
+     <number>0</number>
+    </property>
+   </widget>
+   <widget class="QProgressBar" name="searchComputerForLibrariesProgressBar">
+    <property name="geometry">
+     <rect>
+      <x>600</x>
+      <y>160</y>
+      <width>231</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="value">
+     <number>0</number>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="fileSizeComboBox">
+    <property name="geometry">
+     <rect>
+      <x>720</x>
+      <y>330</y>
+      <width>73</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_11">
+    <property name="geometry">
+     <rect>
+      <x>604</x>
+      <y>330</y>
+      <width>111</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Display file size in:</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>798</width>
+     <width>1425</width>
      <height>26</height>
     </rect>
    </property>
